# sol-ai-image

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nomad.yaml
