[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]==1.3.16rc2", 
  "plotly<6.0"
  ]

[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git",
  "nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git", 
  "nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git",
  #"nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git@028410c92efd3f3985878c74e4227b6e14752f20",
  "nomad-hiern @ git+https://github.com/nomad-hzb/nomad-hiern.git",
  "nomad-perotf @ git+https://github.com/nomad-hzb/nomad-perotf.git",
  "nomad-pvcomb @ git+https://codebase.helmholtz.cloud/pvcomb/nomad-pvcomb.git@develop",
  "nomad-tfsc-general @ git+https://github.com/nomad-hzb/nomad-tfsc-general.git"
]
jupyter = ["voila", "jupyterlab>=4.0"]
dev = ["nomad-lab[parsing, infrastructure, dev]==1.3.16rc2]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple"
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "allow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
