[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]==1.4.0",
  "plotly<6.0"
  ]

[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git",
  "nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git", 
  "nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git",
  #"nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git@028410c92efd3f3985878c74e4227b6e14752f20",
  "nomad-hiern @ git+https://github.com/nomad-hzb/nomad-hiern.git",
  "nomad-perotf @ git+https://github.com/nomad-hzb/nomad-perotf.git",
  "nomad-pvcomb @ git+https://codebase.helmholtz.cloud/pvcomb/nomad-pvcomb.git@develop",
  "nomad-tfsc-general @ git+https://github.com/nomad-hzb/nomad-tfsc-general.git"
]
jupyter = [
'voila',
'ipyaggrid',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
'ipyvuetify',
'ipympl',
'ipython<9',
'pyvis',
#'baybe',
'lmfit',
'jupyterlab_h5web',
'jupyterlab>4.0',
'xraylarch',
'seaborn', # 'jupyterhub<5','oauthenticator<16'
]
dev = ["nomad-lab[parsing, infrastructure, dev]==1.4.0"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple"
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "allow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
